--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <footer>
     <p>Developed By</p>
     <h3>Vipin Kumar</h3>
-    <p>&copy; Copyright 2019-2020</p>
+    <p>&copy; Copyright 2021</p>
   </footer>
 
   <script src="index.js" type="text/javascript"></script>
